# minimd

./: .gitignore  DEV-DOC.md  LICENSE  PRD.md  README-Windows.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/store/: useDocumentStore.ts
