[package]
name = "minimd"
version = "0.1.0"
description = "MiniMD - A lightweight Markdown editor built with Tauri and React"
authors = ["zhangy12385"]
license = "MIT"
repository = "https://github.com/zhangy12385/minimd"
homepage = "https://github.com/zhangy12385/minimd"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-cli = "2.4.1"
